working_controllers/Disallow_Env_Vars/Disallow_Env_Vars/test-pass-volumeMount.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: good-deployment
  namespace: webhook-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: good-deployment
  template:
    metadata:
      labels:
        app: good-deployment
    spec:
      containers:
      - name: app
        image: nginx
        volumeMounts:
        - name: config-volume
          mountPath: /etc/config
      volumes:
      - name: config-volume
        configMap:
          name: some-config
